components/Navbar/Navbar.css
.navbar {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  background-color: white;
  z-index: 1999;
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.35);
  display: flex;
  flex-direction: column;
  user-select: none;
  width: 60px;
}

.navbar .spacer {
  flex: 5;
}

.navbar button {
  padding: 6px;
  background-color: transparent;
  border: none;
  outline: none;
  border-radius: 0;
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  transition: background-color 0.2s;
  font: inherit;
  font-size: 9pt;
  color: #333;
}
.navbar button:active {
  background-color: rgba(0, 0, 0, 0.15);
}

.navbar button .MuiSvgIcon-root {
  width: 32px;
  height: 32px;
  color: #888;
}

@media screen and (max-width: 600px) {
  .navbar {
    top: auto;
    right: 0;
    flex-direction: row;
    width: 100%;
    height: 60px;
  }

  .navbar .spacer {
    flex: 0;
    width: 0;
    height: 0;
  }

  .navbar button {
    flex: 1;
  }
}

